# iam4kube

./: .bazelrc  .gitignore  BUILD.bazel  Gopkg.toml  LICENSE  Makefile  README.md  WORKSPACE  types.go
cmd/: BUILD.bazel  cmd.go  main.go
cmd/app/: BUILD.bazel  app.go  aux_server.go  metrics.go
cmd/iam4kube/: BUILD.bazel  main.go
cmd/iam4kube/app/: BUILD.bazel  app.go  aux_server.go
cmd/ip2service/: BUILD.bazel  main.go
cmd/ip2service/app/: BUILD.bazel  app.go  aux_server.go
pkg/amazon/: BUILD.bazel  kloud.go
pkg/core/: BUILD.bazel  kernel.go  prefetcher.go  prefetcher_notifier.go  prefetcher_notifier_test.go  prefetcher_test.go
pkg/ip2service/: BUILD.bazel  endpoints_event_handler.go  router.go
pkg/kube/: BUILD.bazel  authz_kroler.go  blocking_index.go  kroler.go  kroler_test.go
pkg/meta/: BUILD.bazel  server.go  server_test.go  utils.go  utils_test.go
pkg/server/: BUILD.bazel  server.go  utils.go  utils_test.go
pkg/util/: BUILD.bazel  http_utils.go  iam.go  iam_test.go  prometheus.go
pkg/util/logz/: BUILD.bazel  logz.go  logz_test.go
pkg/util/testing/: BUILD.bazel  utils_for_tests.go
