load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    external = "vendored",
    prefix = "github.com/ash2k/iam4kube",
)

gazelle(
    name = "gazelle_fix",
    command = "fix",
    external = "vendored",
    prefix = "github.com/ash2k/iam4kube",
)

go_library(
    name = "go_default_library",
    srcs = ["types.go"],
    importpath = "github.com/ash2k/iam4kube",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/aws/aws-sdk-go/aws/arn:go_default_library"],
)
