load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ash2k/iam4kube/cmd/iam4kube",
    visibility = ["//visibility:private"],
    deps = ["//cmd/iam4kube/app:go_default_library"],
)

go_binary(
    name = "iam4kube",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "iam4kube_race",
    embed = [":go_default_library"],
    race = "on",
    tags = ["exclude_from_tests"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "container",
    binary = ":iam4kube",
    tags = ["exclude_from_tests"],
)

go_image(
    name = "container_race",
    binary = ":iam4kube_race",
    tags = ["exclude_from_tests"],
)

container_push(
    name = "push_docker",
    format = "Docker",
    image = ":container",
    registry = "index.docker.io",
    repository = "ash2k/iam4kube",
    stamp = True,
    tag = "{STABLE_BUILD_GIT_TAG}-{STABLE_BUILD_GIT_COMMIT}",
    tags = ["exclude_from_tests"],
)

container_push(
    name = "push_docker_race",
    format = "Docker",
    image = ":container_race",
    registry = "index.docker.io",
    repository = "ash2k/iam4kube",
    stamp = True,
    tag = "{STABLE_BUILD_GIT_TAG}-{STABLE_BUILD_GIT_COMMIT}-race",
    tags = ["exclude_from_tests"],
)
