load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "kernel.go",
        "prefetcher.go",
    ],
    importpath = "github.com/ash2k/iam4kube/pkg/core",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/util/logz:go_default_library",
        "//vendor/github.com/ash2k/stager:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/arn:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/k8s.io/client-go/util/buffer:go_default_library",
    ],
)
