load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["kroler.go"],
    importpath = "github.com/ash2k/iam4kube/pkg/kube",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/arn:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
    ],
)
