load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "server.go",
        "utils.go",
    ],
    importpath = "github.com/ash2k/iam4kube/pkg/meta",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//vendor/github.com/gorilla/mux:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
    ],
)
