load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "app.go",
        "aux_server.go",
    ],
    importpath = "github.com/ash2k/iam4kube/cmd/ip2service/app",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/ip2service:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/util/logz:go_default_library",
        "//vendor/github.com/ash2k/stager:go_default_library",
        "//vendor/github.com/coreos/go-iptables/iptables:go_default_library",
        "//vendor/github.com/go-chi/chi:go_default_library",
        "//vendor/github.com/go-chi/chi/middleware:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus/promhttp:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/client-go/informers/core/v1:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
    ],
)
